--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+header {
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    background-color: white;
+    padding-top: 3vh;
+    padding-bottom: 2vh;
+}
+
 /* 6. Write CSS rules that cause the header and .collage div to be centered on the page */
 header, .collage {
     text-align: center;
